@@ -1,5 +1,12 @@
-/* SmartTemplates older version history - before 3.0 */
-  Version History  (chronological)
+/**********************************************
+ **                                          **
+ **  SmartTemplates Historical Change Logs   **
+ **                                          **
+ **********************************************/
+
+
+  Version History  (chronological) before v4.0
+
   This was moved from smartTempalte-main.js
   
   Version 0.7.4 - Released 09/08/2011
